--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.NardDogsInventory"
         tools:targetApi="31">
         <activity
+            android:name=".GoogleReg"
+            android:exported="false" />
+        <activity
+            android:name=".registerGoogle"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
