--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:theme="@style/Theme.NardDogsInventory"
         tools:targetApi="31">
         <activity
-            android:name=".GoogleReg"
+            android:name=".ItemList"
             android:exported="false" />
         <activity
-            android:name=".registerGoogle"
+            android:name=".GoogleReg"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
