working date math

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:theme="@style/Theme.NardDogsInventory"
         tools:targetApi="31">
         <activity
-
+            android:name=".Sales"
+            android:exported="false" />
+        <activity
             android:name=".Recycler_View"
             android:exported="false" />
         <activity
-
             android:name=".ValidateCredentials"
             android:exported="false" />
         <activity
@@ -24,12 +25,10 @@
             android:exported="false" />
         <activity
             android:name=".GoogleReg"
-
             android:exported="false" />
         <activity
             android:name=".ItemList"
             android:exported="false" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
