--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.NardDogsInventory"
         tools:targetApi="31">
         <activity
+            android:name=".ViewSoldInventory"
+            android:exported="false" />
+        <activity
             android:name=".ViewItem"
             android:exported="false" />
         <activity
@@ -47,6 +50,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.my.package.provider"
