--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
 }
 
 android {
-    namespace 'com.example.narddogsinventory'
+    namespace 'com.izaiko.narddogsinventory'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.narddogsinventory"
+        applicationId "com.izaiko.narddogsinventory"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
